--- a/cibapp/src/components/common/Card.css
+++ b/cibapp/src/components/common/Card.css
@@ -12,6 +12,7 @@
     box-shadow: 0 1px 1px 2px rgba(0, 0, 0, 0.10);
            height: auto;
     padding: 30px 0px;
+    transition: 0.5s ease;
 }
 .cardtext{
     color: #1858A8;
@@ -36,4 +37,10 @@ font-weight: 400;
 margin: 0;
 width: 253px;
 line-height: 24px; /* 166.667% */
+}
+.card1:hover{
+    /* background: orange; */
+    box-shadow: 0 1px 21px 2px rgba(111, 71, 0, 0.20);
+
+
 }
