--- a/cibapp/src/components/common/Footerlink.css
+++ b/cibapp/src/components/common/Footerlink.css
@@ -6,4 +6,8 @@ font-style: normal;
 font-weight: 400;
 line-height: 32px; /* 253.968% */
 margin: 0;
+transition: ease 0.5s;
+}
+.footerLink:hover{
+color: #F58420;
 }
