--- a/cibapp/src/components/common/Linkname.css
+++ b/cibapp/src/components/common/Linkname.css
@@ -5,4 +5,8 @@ font-size: 14.9px;
 font-style: normal;
 font-weight: 600;
 line-height: 14px; /* 93.96% */
+transition: ease 0.5s;
+}
+.linkname:hover{
+color: #F58420;
 }
