--- a/cibapp/src/components/common/SmallMenuTab.css
+++ b/cibapp/src/components/common/SmallMenuTab.css
@@ -5,5 +5,9 @@ font-size: 14.9px;
 font-style: normal;
 font-weight: 600;
 
-line-height: normal
+line-height: normal;
+transition: 0.5S ease;
+}
+.smallmenutab:hover{
+    color: #F58420;
 }
